--- a/package.json
+++ b/package.json
@@ -6,8 +6,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.4.1",
+    "radium": "^0.26.0",
     "react": "^16.13.1",
+    "react-animated-css": "^1.2.1",
+    "react-animation": "^1.2.2",
+    "react-animations": "^1.0.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-native": "^0.62.2",
+    "react-promise-tracker": "^2.1.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
